syntax = "proto3";
package cart;

option go_package = "cart_grpc/cart_grpc";

message AddToCartRequest {
  string userId = 1;

  string productId = 2;
  string title = 3;
  string description = 4;
  float  price = 5;
  string image = 6;
}

message RemoveFromCartRequest {
  string userId = 1;
  string cartItemId = 2;
}

message CartOperationRequest {
  string userId = 1;
  string productId = 2;
}

message CartItem {
  string id = 1;
  string productId = 2;
  string title = 3;
  string description = 4;
  float price = 5;
  string image = 6;
}

message CartContentRequest {
  string userId = 1;
}

message CartContentResponse {
  int32 itemCount = 1;
  repeated CartItem cartItems = 2;
}

service CartService {
  rpc CartContent(CartContentRequest) returns (CartContentResponse) {}
  rpc AddToCart(AddToCartRequest) returns (CartContentResponse) {}
  rpc RemoveFromCart(RemoveFromCartRequest) returns (CartContentResponse) {}
}
